--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 .jumbotron {
+  border: 3px solid black;
   margin-top: 7%; }
 
 .jumbotron h1 {
@@ -7,7 +8,11 @@
   padding-left: 35%;
   letter-spacing: 10px; }
 
-li {
+.pages {
+  display: inline;
+  list-style: none; }
+
+.photos {
   display: inline;
   list-style: none; }
 
