--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,9 @@
+.col {
+	margin : {
+		top: 20px;
+	}
+}
+
 .jumbotron {
 	border: 3px solid black;
 	margin : {
@@ -23,5 +29,9 @@
 
 .photos {
 	display: inline;
+	list-style: none;
+}
+
+.carte {
 	list-style: none;
 }
