--- a/style.css
+++ b/style.css
@@ -86,4 +86,8 @@ a {
 .boutton {
   margin-top: 30px; }
 
+.envoyer {
+  font-family: 'Dancing Script';
+  font-size: 25px; }
+
 /*# sourceMappingURL=style.css.map */
