--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
 
 .jumbotron {
   border: 3px solid black;
-  margin-top: 7%; }
+  margin-top: 7%;
+  background-color: rgba(255, 255, 255, 0.5); }
 
 .jumbotron h1 {
   font-family: 'Dancing Script';
